# parallel_workflow

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
parallel_mpi_htp/: __init__.py  cli.py  core.py
tests/: test_parallel_workflow.py
tests/data/: cluster_75.xyz  cluster_80.xyz  cluster_85.xyz
